# Social-Sentiment-System

./: .gitignore  LICENSE  README.md  REAMDE.md  package-lock.json
backend/: .gitignore  init_db.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: analysis.py
backend/app/core/: clients.py  config.py  exceptions.py
backend/app/schemas/: analysis_schema.py
backend/app/scripts/: consumer_job.py  producer_job.py
backend/app/services/: sentiment_service.py  youtube_service.py
backend/database/: create_collections.py  seed_data.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  main.jsx
frontend/src/components/: BootstrapCard.jsx  BootstrapLoader.jsx  BootstrapProgress.jsx  Chart.jsx  CommentList.jsx  Navbar.jsx
frontend/src/contexts/: DataContext.jsx
frontend/src/pages/: AnalysisDetail.jsx  Home.jsx  Person.jsx  Search.jsx
frontend/src/routes/: AppRoutes.jsx
frontend/src/services/: apiService.js
