[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.12.0",
    "confluent-kafka>=2.11.1",
    "datasets==4.0.0",
    "fastapi[all]>=0.116.1",
    "google-api-python-client>=2.181.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "numpy==2.2.6",
    "pydantic==2.11.8",
    "pymongo==4.14.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "transformers>=4.56.1",
    "trendspy>=0.1.6",
    "uvicorn>=0.35.0",
]
